fix minor spacing issue
fix button padding

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -15,8 +15,9 @@ section {
   justify-content: center;
   text-align: center;
 }
-button {
-  margin-bottom: 2rem;
+
+.main-page-form {
+  padding-bottom: 2rem;
 }
 
 .row {
